@@ -8,7 +8,6 @@
 #include <openssl/evp.h>
 #include <openssl/err.h>
 #include <sasl/sasl.h>
-#include <libxml/tree.h>
 #include <krb5.h>
 #endif
 
