@@ -24,6 +24,7 @@
 - don't use dirent d_type to filter out files in scandir()
 - don't schedule new alarms after readmap.
 - use numeric protocol ids instead of protoent structs.
+- lib/defaults.c: use WITH_LDAP conditional around LDAP types.
 
 25/07/2012 autofs-5.0.7
 =======================
